# spr

./: .gitignore  CMakeLists.txt  README.md
include/: jlib.hpp
src/: main.cpp
tests/: CMakeLists.txt  main.cpp
